--- a/Return to the Stars.materials/Templates/StarryVoid/index.html
+++ b/Return to the Stars.materials/Templates/StarryVoid/index.html
@@ -18,7 +18,8 @@
 <div class="links">
 	<ul>
 	<li><div class="download">[DOWNLOAD]</div></li>
-	<div class="auxiliary">[AUXILIARY]</div>
+	<div class="auxiliary">[AUXILIARY]
+	<li><a href="http://plover.net/~davidw/sol/r/retur21.html">Walkthrough and Maps</a> <span class="filetype">by David Welbourne (link)</span></li></div>
 	</ul>
 </div>
 
